# exercises

./: README.md  pyproject.toml
src/exercises/: lc_592.py
