[project]
name = "exercises"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "polars>=1.5.0",
    "httpx>=0.27.0",
    "ipykernel>=6.29.5",
    "numpy>=2.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
